<resources>
    <string name="app_name">popmate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_date">시작 </string>
    <string name="end_date"> 종료</string>
    <string name="popup_store_visit_time">팝업스토어 방문 시간</string>
    <string name="popup_store_visit_status">예약 중</string>
    <string name="reservation">예약하기</string>
    <string name="popup_store_visiter_count">팝업스토어 방문 인원</string>
    <string name="reservation_success">팝업스토어 예약완료</string>
    <string name="reservation_notification_detail">- 입장시간 이후 입장이 불가능할 수 있습니다.\n- 개별 팝업스토어 상황에 따라 대기 시간이 발생할 수 있습니다.</string>
    <string name="reservation_notification">입장시간에\n해당 팝업스토어 예약라인으로 입장하세요</string>
    <string name="pre_visit">이용전</string>
    <string name="post_visit">이용후</string>
    <string name="reservation_receipt">팝업스토어 예약내역</string>
    <string name="cancel_visit">취소됨</string>
    <string name="purchase">구매내역</string>

    <string name="no_reservation">예약 내역이 없습니다.</string>
    <string name="entry_time">입장시간</string>
    <string name="guest_count">예약인원</string>
    <string name="popup_store_place">팝업스토어 장소</string>
    <string name="cancel_reservation">예약 취소하기</string>
    <string name="cancel_notification">예약을 취소하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
</resources>
