<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="titleText"
            type="String" />
        <variable
            name="sale"
            type="java.lang.Boolean"/>

        <variable
            name="viewModel"
            type="com.example.popmate.viewmodel.reservation.MyReservationDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.reservation.MyReservationDetailActivity">

        <include
            android:id="@+id/layout_title_simple"
            layout="@layout/layout_title_simple"
            app:titleText="@{`예약 내역`}" />

        <TextView
            android:id="@+id/tv_reservation_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/reservation_notification"
            android:textAlignment="center"
            android:textColor="@color/tx_dark_gray"
            android:textSize="@dimen/h5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_title_simple" />

        <TextView
            android:id="@+id/tv_reservation_detail_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/reservation_notification_detail"
            android:textSize="@dimen/h7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reservation_notification" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reservation_detail_notification">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_popup_store"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_reservation_qr"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="20dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_popup_store" />

                <TextView
                    android:id="@+id/tv_popup_store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="팝업스토어 이름"
                    android:textColor="@color/tx_dark_gray"
                    android:textSize="@dimen/h5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_reservation_qr" />

                <!-- 예약 시간 -->
                <ImageView
                    android:id="@+id/img_clock"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/clock_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_popup_store_name" />

                <TextView
                    android:id="@+id/tv_visit_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/entry_time"
                    android:textColor="@color/tx_dark_gray"
                    android:textSize="@dimen/h6"
                    app:layout_constraintStart_toEndOf="@+id/img_clock"
                    app:layout_constraintTop_toTopOf="@+id/img_clock" />

                <TextView
                    android:id="@+id/tv_visit_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="10:00"
                    android:textColor="@color/tx_dark_gray"
                    android:textSize="@dimen/h7"
                    app:layout_constraintStart_toEndOf="@+id/tv_visit_time"
                    app:layout_constraintTop_toTopOf="@+id/img_clock" />

                <TextView
                    android:id="@+id/tv_visit_time_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" ~ "
                    android:textColor="@color/tx_dark_gray"
                    android:textSize="@dimen/h7"
                    app:layout_constraintStart_toEndOf="@+id/tv_visit_start_time"
                    app:layout_constraintTop_toTopOf="@+id/img_clock" />

                <TextView
                    android:id="@+id/tv_visit_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10:20"
                    android:textColor="@color/tx_dark_gray"
                    android:textSize="@dimen/h7"
                    app:layout_constraintStart_toEndOf="@+id/tv_visit_time_divider"
                    app:layout_constraintTop_toTopOf="@+id/img_clock" />

                <!-- 예약 인원 -->
                <ImageView
                    android:id="@+id/img_human"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/human"
                    app:layout_constraintStart_toStartOf="@+id/img_clock"
                    app:layout_constraintTop_toBottomOf="@id/img_clock" />

                <TextView
                    android:id="@+id/tv_visit_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guest_count"
                    android:textColor="@color/tx_dark_gray"
                    android:textSize="@dimen/h6"
                    app:layout_constraintStart_toStartOf="@+id/tv_visit_time"
                    app:layout_constraintTop_toTopOf="@id/img_human" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/tv_visit_start_time"
                    app:layout_constraintTop_toTopOf="@id/img_human">

                    <TextView
                        android:id="@+id/tv_visit_people_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textColor="@color/tx_dark_gray"
                        android:textSize="@dimen/h7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="명"
                        android:textColor="@color/tx_dark_gray"
                        android:textSize="@dimen/h7" />
                </LinearLayout>


                <!-- 예약 장소 -->
                <ImageView
                    android:id="@+id/img_location"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/location"
                    app:layout_constraintStart_toStartOf="@+id/img_clock"
                    app:layout_constraintTop_toBottomOf="@id/img_human" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_store_place"
                    android:textColor="@color/tx_dark_gray"
                    android:textSize="@dimen/h6"
                    app:layout_constraintStart_toStartOf="@+id/tv_visit_time"
                    app:layout_constraintTop_toTopOf="@id/img_location" />

                <TextView
                    android:id="@+id/tv_visit_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="25dp"
                    android:maxLines="3"
                    android:text="더 현대 서울 3층 팝업스토어 매장 더 현대 서울 3층 팝업스토어 매장 더 현대 서울 3층 팝업스토어 매장 더 현대 서울 3층 팝업스토어 매장"
                    android:textColor="@color/tx_dark_gray"
                    android:textSize="@dimen/h7"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_visit_start_time"
                    app:layout_constraintTop_toTopOf="@id/img_location" />

                <ImageView
                    android:id="@+id/img_loading_spinner"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="20dp"
                    android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_popup_store"
                    app:srcCompat="@drawable/loading_spinner" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/img_visited_success"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:elevation="10dp"
            android:src="@drawable/visited_success"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_title_simple" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
